[package]
name = "circom"
version = "2.1.0"
authors = ["Costa Group UCM","iden3"]
edition = "2018"

description = "circom is a zkSnark circuit compiler"
homepage = "https://iden3.io/circom"
documentation = "https://docs.circom.io"
repository = "https://github.com/iden3/circom"
readme = "README.md"
keywords = ["zkproofs", "zksanrks","circuits","compiler"]
categories = ["compilers"]

[dependencies]
parser = {path = "../parser"}
program_structure = { path = "../program_structure" }
type_analysis = { path = "../type_analysis" }
constraint_generation = { path = "../constraint_generation" }
constraint_writers = { path = "../constraint_writers" }
compiler = { path = "../compiler" }
dag = { path = "../dag" }
clap = "2.33.0"
ansi_term = "0.12.1"
wast = "39.0.0"
exitcode = "1.1.2"
