[package]
name = "circom"
version = "2.2.2"
authors = ["Costa Group UCM","iden3"]
edition = "2018"

description = "circom is a zkSnark circuit compiler"
homepage = "https://iden3.io/circom"
documentation = "https://docs.circom.io"
repository = "https://github.com/iden3/circom"
readme = "README.md"
keywords = ["zkproofs", "zksanrks","circuits","compiler"]
categories = ["compilers"]

[dependencies]
parser = {path = "../parser"}
program_structure = { path = "../program_structure" }
type_analysis = { path = "../type_analysis" }
constraint_generation = { path = "../constraint_generation" }
constraint_writers = { path = "../constraint_writers" }
compiler = { path = "../compiler" }
dag = { path = "../dag" }
clap = "2.33.0"
ansi_term = "0.12.1"
anyhow = "1"
wast = "39.0.0"
mlir-sys = "0.5.0"
melior = "0.25.0"
melior-macro = "0.18.0"
llzk = { git = "https://github.com/Veridise/llzk-rs", package = "llzk" }

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
regex = "1.11"
lazy_static = "1.5"
rand = "0.9"

[build-dependencies]
glob = "0.3.3"
