[package]
name = "circuit_passes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
constraint_generation = {path = "../constraint_generation"}
compiler = {path = "../compiler"}
program_structure = {path = "../program_structure"}
code_producers = {path = "../code_producers"}
by_address = "1.1.0"