[package]
name = "code_producers"
version = "2.0.1"
authors = ["hermeGarcia <hermegarcianavarro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "4.1.3"
lz_fnv = "0.1.2"
num-bigint-dig = "0.6.0"
serde_json = "1.0.68"
