[package]
name = "compiler"
version = "2.1.0"
authors = ["Costa Group UCM","iden3"]
edition = "2018"

[dependencies]
constant_tracking = {path = "../constant_tracking"}
program_structure = {path = "../program_structure"}
code_producers = {path = "../code_producers"}
num-bigint-dig = "0.6.0"
num-traits = "0.2.6"

