[package]
name = "constraint_writers"
version = "2.0.1"
authors = ["hermeGarcia <hermegarcianavarro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
circom_algebra = { path = "../circom_algebra" }
json = "0.12.4"
