[package]
name = "dag"
version = "2.0.9"
authors = ["Costa Group UCM","iden3"]
edition = "2018"

[dependencies]
constraint_list = { path = "../constraint_list" }
constraint_writers = { path = "../constraint_writers" }
circom_algebra = { path = "../circom_algebra" }
program_structure = { path = "../program_structure" }
json = "0.12.4"
