[package]
name = "parser"
version = "2.0.1"
authors = ["Hermenegildo <hermegar@ucm.es>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
rustc-hex = "2.0.1"
lalrpop = { version = "0.18.1", features = ["lexer"] }
num-bigint-dig = "0.6.0"
num-traits = "0.2.6"

[dependencies]
program_structure = {path = "../program_structure"}
lalrpop-util = "0.18.1"
regex = "1.1.2"
rustc-hex = "2.0.1"
num-bigint-dig = "0.6.0"
num-traits = "0.2.6"
serde = "1.0.82"
serde_derive = "1.0.91"
