[package]
name = "program_structure"
version = "2.0.1"
authors = ["hermeGarcia <hermegarcianavarro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan = "0.9.0"
codespan-reporting = "0.9.0"
regex = "1.1.2"
rustc-hex = "2.0.1"
num-bigint-dig = "0.6.0"
num-traits = "0.2.6"
serde = "1.0.82"
serde_derive = "1.0.91"
