[package]
name = "summary"
version = "2.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = "1.0"
program_structure = {path = "../program_structure"}
compiler = {path = "../compiler"}
code_producers = {path = "../code_producers"}