[package]
name = "type_analysis"
version = "2.0.0"
authors = ["hermeGarcia <hermegarcianavarro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
program_structure = {path = "../program_structure"}
num-bigint-dig = "0.6.0"
num-traits = "0.2.6"
